@@ -10,6 +10,10 @@ if WANT_PEEKFD_X86_64
   bin_PROGRAMS += peekfd
   AM_CFLAGS += -DX86_64
 endif
+if WANT_PEEKFD_PPC
+  bin_PROGRAMS += peekfd
+  AM_CFLAGS += -DPPC
+endif
 
 oldfuser_SOURCES = oldfuser.c comm.h signals.c signals.h loop.h i18n.h
 
